style: Have year button shadow-pulse animation on Game Archives Page scale down instead of up to prevent overlap

--- a/src/app/pages/champion/champion-page.component.scss
+++ b/src/app/pages/champion/champion-page.component.scss
@@ -31,7 +31,7 @@ section {
         margin-bottom: 2em;
         color: var(--lcc-color--championPage-primaryText);
         opacity: 0;
-        animation: fadeInUp 1s ease-out forwards;
+        animation: fade-in-up 1s ease-out forwards;
 
         &:nth-child(2) {
           animation-delay: 0.5s;
@@ -169,7 +169,7 @@ section {
   }
 }
 
-@keyframes fadeInUp {
+@keyframes fade-in-up {
   from {
     opacity: 0;
     transform: translateY(20px);
